[gd_scene load_steps=5 format=3 uid="uid://dudyb734xv1pe"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_b3isq"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_ldwse"]
[ext_resource type="PackedScene" uid="uid://can4tlm533io4" path="res://scenes/player.tscn" id="1_n4562"]
[ext_resource type="PackedScene" uid="uid://b23djfxr6l1j6" path="res://scenes/map.tscn" id="2_3n6gt"]

[node name="Game" type="Node"]
script = ExtResource("1_b3isq")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_ldwse")

[node name="Score" type="Label" parent="GameManager"]
z_index = 100
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = -75.0
offset_right = 67.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 36
text = "Score: 0"

[node name="Timer" type="Timer" parent="GameManager"]
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_right = 1368.0
offset_bottom = 870.0
color = Color(0.239216, 0.239216, 0.239216, 0.709804)

[node name="GameOverText" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_right = 1366.0
offset_bottom = 688.0
theme_override_font_sizes/font_size = 61
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartText" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_top = 153.0
offset_right = 1367.0
offset_bottom = 701.0
theme_override_font_sizes/font_size = 31
text = "Restarting in x second.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="GameOver"]
process_mode = 2
wait_time = 5.0

[node name="Map" parent="." instance=ExtResource("2_3n6gt")]

[node name="Slime" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("1_n4562")]
position = Vector2(439, 265)

[connection signal="timeout" from="GameManager/Timer" to="GameManager" method="_on_timer_timeout"]
[connection signal="timeout" from="GameOver/Timer" to="." method="_on_timer_timeout"]
[connection signal="head_collide_with_body" from="Player" to="." method="_on_player_head_collide_with_body"]
